test/lambda/validator/schema_function_new.ls
// Function types schema
type Document = {
    handler: (string, int) -> bool
}
