test/lambda/negative/syntax/fn_missing_arrow.ls
// @expect-error: E100
// @description: Function definition requires '=>' or '{...}' for body

fn add(a, b) a + b
